# eudaq

./: CMakeLists.txt
cmake/: Platform.cmake
gui/include/: euRun.hh  scanHelper.hh
gui/src/: euRun.cc  scanHelper.cc
main/exe/: CMakeLists.txt
main/exe/src/: cmsTriggerReader.cxx  euCliReader.cxx
main/lib/core/include/eudaq/: Event.hh
main/lib/core/src/: Event.cc  FileDeserializer.cc  RunControl.cc
monitors/onlinemon/include/: OnlineMon.hh
monitors/onlinemon/src/: CorrelationHistos.cc  HitmapCollection.cc  HitmapHistos.cc  OnlineMon.cxx  OnlineMonWindow.cc
user/CMSIT/module/: CMakeLists.txt
user/CMSIT/module/src/: CMSITConverterPlugin.cc
user/eudet/module/src/: NiProducer.cc
user/example/module/src/: Ex0Producer.cc
user/piStage/hardware/include/: RotaController.h
user/piStage/hardware/src/: RotaController.cc
user/piStage/module/src/: PIStageProducer.cc
user/pymeasure/: CMakeLists.txt  README.md
user/pymeasure/python/: ExamplePyProducer.py  KeithleyPyProducer.py  TB_VBias_banesMess.py  setup_eudaq.sh  startRun_ExPy.sh  testdirectly.py
user/tlu/hardware/include/: AidaTluController.hh
user/tlu/hardware/src/: AidaTluController.cc
user/tlu/module/src/: AidaTluProducer.cc
